--- a/09advanceOne/ApiRequest.html
+++ b/09advanceOne/ApiRequest.html
@@ -23,7 +23,7 @@
         object se photo nikaliye , followers or make a card in body using js data milane ke bad ek button banaiye body me
         after click photo aana chahiye or follower count aana chahiye
     */
-   
+
     const requestUrl = 'https://api.github.com/users/mritunjay'
 
     const xhr = new XMLHttpRequest();    // this is class so, make aobject
@@ -47,6 +47,12 @@
     }
     
     xhr.send()  // call the open
+
+    // LEARN CONSOLE LOG
+    
+    // "https://github.com/v8/v8/blob/main/src/d8/d8-console.cc"
+    // -> Learn about console
+
 </script>
 </body>
 </html>
